webapp/src/styles.scss
@use '@angular/material' as mat;

@include mat.core();

// Define the two main colors
$lupa-pink: rgba(229, 19, 100);
$lupa-blue: rgba(70, 129, 180);

// Define the blue palette pour Lupa
$lupa-blue-palette: (
  50 : #e9f0f6,
  100 : #c8d9e9,
  200 : #a3c0da,
  300 : #7ea7cb,
  400 : #6294bf,
  500 : #4681b4,
  600 : #3f79ad,
  700 : #376ea4,
  800 : #2f649c,
  900 : #20518c,
  A100 : #c9e0ff,
  A200 : #96c2ff,
  A400 : #63a5ff,
  A700 : #4997ff,
  contrast: (50 : #000000,
    100 : #000000,
    200 : #000000,
    300 : #000000,
    400 : #000000,
    500 : #ffffff,
    600 : #ffffff,
    700 : #ffffff,
    800 : #ffffff,
    900 : #ffffff,
    A100 : #000000,
    A200 : #000000,
    A400 : #000000,
    A700 : #000000,
  )
);

// Define the pink palette pour Lupa
$lupa-pink-palette: (
  50 : #fce3ec,
  100 : #f7b8d1,
  200 : #f289b2,
  300 : #ed5a93,
  400 : #e9367b,
  500 : #e51364,
  600 : #e2115c,
  700 : #de0e52,
  800 : #da0b48,
  900 : #d30636,
  A100 : #fffcfc,
  A200 : #ffc9d3,
  A400 : #ff96a9,
  A700 : #ff7c95,
  contrast: (50 : #000000,
    100 : #000000,
    200 : #000000,
    300 : #000000,
    400 : #ffffff,
    500 : #ffffff,
    600 : #ffffff,
    700 : #ffffff,
    800 : #ffffff,
    900 : #ffffff,
    A100 : #000000,
    A200 : #000000,
    A400 : #000000,
    A700 : #000000,
  )
);

$my-primary: mat.define-palette($lupa-blue-palette);
$my-accent: mat.define-palette($lupa-pink-palette);

$my-theme: mat.define-light-theme((color: (primary: $my-primary,
        accent: $my-accent,
      ),
      typography: mat.define-typography-config(),
      density: 0,
    ));

@include mat.all-component-themes($my-theme);

html,
body {
  height: 100%;
}

body {
  margin: 0;
  padding: 0px;
  overflow-x: hidden;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

//////////////////////
/// Global theming ///
//////////////////////

:root {
  @media (min-width:800px) {
    --center-width: 800px;
    --center-min-width: 700px;
  }

  @media (max-width:800px) {
    --center-width: 92%;
    --center-min-width: 92%;
  }

  --title-bar-height: 4em;
  --foot-bar-height:6em;

  --center-padding : 0 4% 4em 4%;

  --content-height : height: max(100%, calc(100vh - var(--foot-bar-height) - var(--title-bar-height)));
}

.main-div {
  display: flex;
  flex-direction: row;
  height: 100%;
}

.main-title {
  font-size: 30px;
  font-weight: bold;
  padding-bottom: 0.30cm;
  align-self: center;
  padding-top: 1em;
  color: $lupa-blue;
}

.div-side {
  width: 25%;
  background-color: #e6e6e6;
  outline: none;
  position: relative;
}

.div-side-too-small {
  height: var(--content-height);
}

.middle-div {
  display: flex;
  flex-direction: column;
  background-color: white;
  box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.816);
  height: var(--content-height);
  z-index: 1;
  padding: var(--center-padding);
  width: var(--center-width);
  min-width: var(--center-min-width);
}

div.separator {
  background-color: $lupa-blue;
  margin-bottom: 0.3cm;
  height: 3px;
  width: 100%;
}

p.title {
  font-size: 22px;
  font-weight: bold;
  margin-bottom: 0.25cm;
  color: $lupa-blue;
}

p.content {
  font-size: 14px;
}

.download-button {
  width: fit-content;
  margin-bottom: 15px;
}

////////////
/// NEWS ///
////////////

.all-news {
  list-style-type: none;
}

.all-news li {
  display: flex;
  margin-top: 30px;
}

.div-news {
  width: 100%;
  height: 200px;
  align-items: stretch;
  display: flex;
  flex-direction: row;
}

.image-link {
  cursor: pointer;
  width: fit-content;
}

.image-link:hover {
  opacity: 75%;
}

.left-bar {
  width: 20px;
  background-color: $lupa-blue;
  height: 100%;
}

p.name {
  font-size: 25px;
  font-weight: bold;
  margin-top: 5px;
  margin-bottom: 10px;
  color: $lupa-pink;
}

p.date {
  font-size: 14px;
  font-style: italic;
}

p.description {
  font-size: 16px;
}

.image-vignette {
  margin-right: 30px;
  height: 200px;
}

.news-description {
  display: flex;
  flex-direction: column;
  width: 50%;
}

.tags {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: 15px;
  margin-bottom: 20px;
  margin-top: -25px;
  margin-left: -25px;
}

